--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "seed = 42\n",
     "\n",
-    "benchmark = SplitMNIST(n_experiences=10, seed=seed)"
+    "benchmark = SplitMNIST(n_experiences=5,return_task_id=True, shuffle=False,)"
    ],
    "metadata": {
     "collapsed": false
@@ -27,19 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor[1, 28, 28] n=784 x∈[-0.424, 2.821] μ=0.056 σ=1.033"
+      "text/plain": "tensor[1, 28, 28] n=784 x∈[-0.424, 2.821] μ=0.023 σ=1.014"
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = benchmark.train_stream[0].dataset\n",
+    "dataset = benchmark.train_stream[2].dataset\n",
     "lt.lovely(dataset[0][0])"
    ],
    "metadata": {
@@ -48,9 +48,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 19,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'AvalancheSubset' object has no attribute 'return_task_id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[19], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mdataset\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreturn_task_id\u001B[49m\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'AvalancheSubset' object has no attribute 'return_task_id'"
+     ]
+    }
+   ],
+   "source": [
+    "dataset.return_task_id"
+   ],
    "metadata": {
     "collapsed": false
    }
