feat: VAE - Add noise and rebalance batch

--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "seed = 42\n",
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "tensor[1, 28, 28] n=784 x∈[-0.424, 2.821] μ=0.023 σ=1.014"
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,22 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'AvalancheSubset' object has no attribute 'return_task_id'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[19], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mdataset\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreturn_task_id\u001B[49m\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'AvalancheSubset' object has no attribute 'return_task_id'"
-     ]
+     "data": {
+      "text/plain": "Counter({1: 5421, 0: 5842})"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset.return_task_id"
+    "from collections import Counter\n",
+    "\n",
+    "Counter(dataset.targets)"
    ],
    "metadata": {
     "collapsed": false
