--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -51,6 +51,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2"
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "benchmark.train_stream[2].current_experience"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "outputs": [
     {
