--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -71,13 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "tensor[3, 32, 32] n=3072 x∈[-0.484, 0.418] μ=-0.185 σ=0.143"
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,14 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "from src.vq_vae.model.vq_vae import VQVae\n",
+    "\n",
+    "vae = VQVae(\n",
+    "\n",
+    ")\n",
+    "x, *_ = dataset[0]\n"
+   ],
    "metadata": {
     "collapsed": false
    }
