--- a/notebooks/vq_vae_image_gpt/tvq_vqe_visualizations.ipynb
+++ b/notebooks/vq_vae_image_gpt/tvq_vqe_visualizations.ipynb
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "metadata": {
     "tags": []
    },
@@ -488,10 +488,11 @@
     "\n",
     "class ImageGPTDataset(Dataset):\n",
     "\n",
-    "    def __init__(self, vq_vae_model, dataset, sos_token):\n",
+    "    def __init__(self, vq_vae_model, dataset, sos_token, mask_token):\n",
     "        super().__init__()\n",
     "\n",
     "        self.sos_token = sos_token\n",
+    "        self.mask_token = mask_token\n",
     "        self.values = []\n",
     "        self.targets = []\n",
     "        self.all_forward_indexes = []\n",
@@ -502,7 +503,11 @@
     "        self._project_dataset(vq_vae_model, dataset)\n",
     "\n",
     "    def __getitem__(self, item):\n",
-    "        return {'input_ids': self.values[item], \"labels\": self.targets[item]}\n",
+    "        return {\n",
+    "            \"input_ids\": self.values[item], \n",
+    "            \"labels\": self.targets[item],\n",
+    "            \"forward_indexes\": self.all_forward_indexes[:, item],\n",
+    "        }\n",
     "    \n",
     "    @torch.no_grad()\n",
     "    def _project_dataset(self, vq_vae_model, dataset):\n",
@@ -519,15 +524,14 @@
     "            with torch.no_grad():\n",
     "                # extract pathes featues\n",
     "                encoder = vq_vae_model.encoder\n",
-    "                patches = encoder.patchify(img)\n",
+    "                patches = encoder.patchify(x)\n",
     "                patches = rearrange(patches, \"b c h w -> (h w) b c\")\n",
     "                patches = patches + encoder.pos_embedding\n",
     "\n",
     "                backward_indexes = None\n",
-    "                if shuffle:\n",
-    "                    ratio = choice(encoder.mask_ratios, p=encoder.mask_ratios_probs)\n",
-    "                    encoder.shuffle.ratio = ratio\n",
-    "                    patches, forward_indexes, backward_indexes = encoder.shuffle(patches)\n",
+    "                ratio = choice(encoder.mask_ratios, p=encoder.mask_ratios_probs)\n",
+    "                encoder.shuffle.ratio = ratio\n",
+    "                patches, forward_indexes, backward_indexes = encoder.shuffle(patches)\n",
     "\n",
     "                patches = torch.cat(\n",
     "                    [encoder.cls_token.expand(-1, patches.shape[1], -1), patches], dim=0\n",
@@ -544,7 +548,7 @@
     "                # fill masked pathes with learned embedding\n",
     "                decoder = vq_vae_model.decoder\n",
     "                mask_token_id = torch.tensor(\n",
-    "                    config.num_embeddings, \n",
+    "                    self.mask_token, \n",
     "                    device=vq_vae_model.device\n",
     "                )[None, None]\n",
     "\n",
@@ -583,7 +587,7 @@
     "            self.all_forward_indexes.append(forward_indexes.cpu())\n",
     "\n",
     "        self.targets = torch.cat(self.targets)\n",
-    "        self.all_forward_indexes = torch.cat(self.all_forward_indexes)        \n",
+    "        self.all_forward_indexes = torch.cat(self.all_forward_indexes, dim=1)        \n",
     "        self.values = torch.cat(self.values)\n",
     "\n",
     "        \n",
@@ -593,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {
     "tags": []
    },
@@ -601,7 +605,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32df8f1aa1b24afcaf7bd405fe8aa5c8",
+       "model_id": "a3a052754bb34126b324de3a6d820227",
        "version_major": 2,
        "version_minor": 0
       },
@@ -611,32 +615,31 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1bbe34582024b8bb9ed303018dbe864",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/196 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "vq_vae_model.encoder.mask_ratios = [0.5, 0.6, 0.75]\n",
+    "vq_vae_model.encoder.mask_ratios = [0.5, 0.5, 0.5]\n",
     "vq_vae_model.encoder.mask_ratios_probs = [0.4, 0.3, 0.3]\n",
-    "ipgt_training_data = ImageGPTDataset(vq_vae_model, training_data, config.num_embeddings + 1)\n",
-    "ipgt_validation_data = ImageGPTDataset(vq_vae_model, validation_data, config.num_embeddings + 1)"
+    "ipgt_training_data = ImageGPTDataset(\n",
+    "    vq_vae_model, \n",
+    "    training_data,\n",
+    "    config.num_embeddings + 1, \n",
+    "    config.num_embeddings,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "take_indexes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -695,72 +698,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 82,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForMaskedLM: ['cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
-      "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "capital\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from transformers import AutoTokenizer, BertForMaskedLM\n",
+    "from transformers import AutoTokenizer, BertForMaskedLM,BertConfig\n",
     "import torch\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
-    "model = BertForMaskedLM.from_pretrained(\"bert-base-uncased\")\n",
-    "\n",
-    "inputs = tokenizer(\"Londin is the [MASK] of Great Britain.\", return_tensors=\"pt\")\n",
-    "\n",
-    "with torch.no_grad():\n",
-    "    logits = model(**inputs).logits\n",
-    "\n",
-    "# retrieve index of [MASK]\n",
-    "mask_token_index = (inputs.input_ids == tokenizer.mask_token_id)[0].nonzero(as_tuple=True)[0]\n",
-    "\n",
-    "predicted_token_id = logits[0, mask_token_index].argmax(axis=-1)\n",
-    "print(tokenizer.decode(predicted_token_id))"
+    "bert_config = BertConfig(\n",
+    "    **{\n",
+    "      \"attention_probs_dropout_prob\": 0.1,\n",
+    "      \"classifier_dropout\": None,\n",
+    "      \"hidden_act\": \"gelu\",\n",
+    "      \"hidden_dropout_prob\": 0.1,\n",
+    "      \"hidden_size\": config.embedding_dim,\n",
+    "      \"initializer_range\": 0.02,\n",
+    "      \"intermediate_size\": 1536,\n",
+    "      \"layer_norm_eps\": 1e-12,\n",
+    "      \"max_position_embeddings\": 16*16+2,\n",
+    "      \"model_type\": \"bert\",\n",
+    "      \"num_attention_heads\": 8,\n",
+    "      \"num_hidden_layers\": 12,\n",
+    "      \"pad_token_id\": 0,\n",
+    "      \"position_embedding_type\": \"absolute\",\n",
+    "      \"transformers_version\": \"4.27.4\",\n",
+    "      \"type_vocab_size\": 2,\n",
+    "      \"use_cache\": True,\n",
+    "      \"vocab_size\": config.num_embeddings + 2\n",
+    "    }\n",
+    ")\n",
+    "bert = BertForMaskedLM(bert_config)\n",
+    "bert.bert.embeddings.word_embeddings.weight.data[:-2] = vq_vae_model.vq_vae._embedding.weight.data.clone()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor[1, 12] bool x∈[False, True] μ=0.083 σ=0.289"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inputs.input_ids == tokenizer.mask_token_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 83,
    "metadata": {
     "tags": []
    },
@@ -769,7 +744,6 @@
     "from transformers import ImageGPTConfig, AutoImageProcessor\n",
     "from transformers import ImageGPTForCausalImageModeling\n",
     "\n",
-    "# small_image_gpt = ImageGPTForCausalImageModeling.from_pretrained(\"openai/imagegpt-small\")\n",
     "configuration = ImageGPTConfig(**{\n",
     "    \"activation_function\": \"quick_gelu\",\n",
     "    \"attn_pdrop\": 0.1,\n",
@@ -797,6 +771,122 @@
     "image_embeddings.weight.data[-1] = vq_vae_model.decoder.mask_token.data.clone()\n",
     "\n",
     "counter = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fabec09d29d64c078b78e21626494ff4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[W ParallelNative.cpp:230] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7d63b1a48ebd4f97812ef636fc373d84",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/7813 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[W ParallelNative.cpp:230] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_gpt.to(device)\n",
+    "bert.to(device)\n",
+    "\n",
+    "data_loader = DataLoader(\n",
+    "    ipgt_training_data,\n",
+    "    batch_size=32,\n",
+    "    num_workers=1,\n",
+    "    shuffle=True,\n",
+    ")\n",
+    "\n",
+    "for i in trange(counter, 2):\n",
+    "    \n",
+    "    for batch in tqdm(data_loader):\n",
+    "        \n",
+    "        input_ids = batch[\"input_ids\"].to(device)\n",
+    "        forward_indexes = rearrange(batch[\"forward_indexes\"], \"b t -> t b\").to(device)\n",
+    "        \n",
+    "        T, B = forward_indexes.shape\n",
+    "        remain_T = int(T * (1 - 0.5)) \n",
+    "        \n",
+    "        igpt_output = image_gpt(input_ids=input_ids)\n",
+    "        bert_output = bert(input_ids=input_ids)\n",
+    "        \n",
+    "        # igpt loss\n",
+    "        igpt_logits = igpt_output.logits\n",
+    "        igpt_loss = loss_fn(\n",
+    "            igpt_logits[:, :-1].reshape(-1, igpt_logits.shape[-1]),\n",
+    "            input_ids[..., 1:].reshape(-1)\n",
+    "        )\n",
+    "        \n",
+    "        # bert loss\n",
+    "        bert_logits = rearrange(bert_output.logits, \"b t c -> t b c\")\n",
+    "        bert_logits = take_indexes(bert_logits, forward_indexes)\n",
+    "        bert_logits = bert_logits[remain_T:]\n",
+    "        \n",
+    "        bert_targets = rearrange(input_ids, \"b t -> t b 1\")\n",
+    "        bert_targets = take_indexes(bert_targets, forward_indexes)\n",
+    "        bert_targets = bert_targets[remain_T:]\n",
+    "        \n",
+    "        bert_loss = loss_fn(bert_logits, bert_targets)\n",
+    "        \n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor[128, 32, 1] i64 n=4096 (32Kb) x∈[0, 129] μ=98.042 σ=39.404 mps:0"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bert_targets = rearrange(input_ids, \"b t -> t b 1\")\n",
+    "bert_targets = take_indexes(bert_targets, forward_indexes)\n",
+    "bert_targets = bert_targets[remain_T:]\n",
+    "bert_targets"
    ]
   },
   {
